# Grasping-Point-Generator

./: CMakeLists.txt  README.md  package.xml
config/: options.yaml
include/pgfat/: Mesh_preprocessing.h  collision_check_utils.h  data_structure.h  data_transform.h  geometrics.h  grasp_point_generator.h  mesh_sampling.h  triangle_plane_data.h  visualization.h  vtk_mesh_utils.h  yaml_config.h
meshes/Ikea/: ikea_stefan_bottom.yaml  ikea_stefan_bottom_cont.yaml  ikea_stefan_bracket.yaml  ikea_stefan_bracket_cont.yaml  ikea_stefan_side_left.yaml  ikea_stefan_side_left_cont.yaml
meshes/Motor_part/: Aufsatz.stl  Deckel.stl  Gehaeuse.stl  Gewindeschnecke.stl  Lager.stl  M4_screw.stl  Spule_einfach.stl  Stift.stl  Zahnrad.stl  finger2.stl
src/: Mesh_preprocessing.cpp  data_transform.cpp  geometrics.cpp  grasp_point_generator.cpp  mesh_sampling.cpp  pgfat.cpp  visualization.cpp
